@@ -91,12 +91,14 @@ activate = CTRL+INS
 ; (re)set reference pose for tracker
 center = CTRL+DEL
 
-; VIRTUAL TRACKER
+; FILTER
 ; increase / decrease filter strength
 translation_increase = CTRL+PLUS
 translation_decrease = CTRL+MINUS
 rotation_increase = CTRL+0
 rotation_decrease = CTRL+9
+
+; VIRTUAL TRACKER
 ; modify offset values for virtual tracker (by 1 cm)
 offset_forward = CTRL+UP
 offset_back = CTRL+DOWN
@@ -112,10 +114,13 @@ toggle_overlay = CTRL+D
 ; toggle between eye cache and calculation
 toggle_cache = CTRL+E
 
+; additional modifier(s) for faster filter (x5) and cor position (x10) manipulation 
+fast_modifier = ALT
+
 ; CONFIG
-; write filter strength and cor offset to global config file
+; write filter strength and cor offset into global config file
 save_config = CTRL+SHIFT+S
-; write filter strength and cor offset to application specific config file
+; write filter strength and cor offset into application specific config file
 save_config_app = CTRL+SHIFT+A
 ; reload configuration from file(s)
 reload_config = CTRL+SHIFT+L
