@@ -10,15 +10,16 @@ Version 0.2.8
 	- improved stability/compatibility
 	- internal refactoring
 	- prepared for (potential) future use of in-game menu
-
+	
 	MmfReader
 	- added ability to write values to csv file
 	
 	Miscellaneous
+	- added modifier key(s) for faster in-game filter and cor position modification
 	- simplified/improved handling of in-game recenter events
-	- increased default tolerance for eye/pose reconstruction cache
 	- added support for X-Plane 12
 	- added toggle to enable debug level logging
+	- increased default tolerance for eye/pose reconstruction cache to 500ms (only on installation without previous config file present)
 	
 	Known issues
 	- motion controller compensation does not work properly in MSFS main menu (controller movement gets blocked)
